# AZX

./: .pre-commit-config.yaml  Dockerfile  README.md  build-docker-image.sh  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: python.yml.disabled  update_space.yml
api/: geocode-integrated  geocode-integrated.py  geocode.py  main.py  nws.py
azx/: __init__.py  info.py
azx/app/: README.md  azx_data.tsv  chatbot.py  rag.py  utils.py
cli/: nws.py
docs/: LICENSE  index.md  install.md  tutorial.md
docs/dev/: documentation.md  formatting.md  install.md  test.md
notebooks/: nws.ipynb
scripts/: launch-notebook  run_branch.py  store_data.py
scripts/resources/5d8dfaab-ffa6-4c86-8e1c-927af33d10dd/: index_metadata.pickle
tests/: test_example.py  utils.py
